welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:5: error: not found: value to
  for (k<-1-to n-1){
            ^indexOfMaxValue:10: error: Boolean does not take parameters
    else (nums(k)<=m){
                     ^